[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.cw20-base]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release.package.cw721-base]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release.package.fantasy]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
